force-app/main/default/objects/Contact/fields/Account_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_External_ID__c</fullName>
    <formula>Account.External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account External ID</label>
    <type>Text</type>
</CustomField>