force-app/main/default/objects/Contact/fields/Billing_Address_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_External_ID__c</fullName>
    <label>Billing Address External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>