force-app/main/default/objects/Contact/fields/Is_Guest__c.field-meta.xml
<CustomField>
    <fullName>Is_Guest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Guest</label>
    <type>Checkbox</type>
</CustomField>