force-app/main/default/objects/Contact/fields/SFCC_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Customer_ID__c</fullName>
    <label>SFCC Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>