force-app/main/default/objects/Contact/fields/SFCC_Identifier_Name__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Identifier_Name__c</fullName>
    <formula>&quot;SFCC Customer ID&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFCC Identifier Name</label>
    <type>Text</type>
</CustomField>