force-app/main/default/objects/Contact/fields/SFCC_Identifier_Type__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Identifier_Type__c</fullName>
    <formula>&quot;External ID&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFCC Identifier Type</label>
    <type>Text</type>
</CustomField>